--- a/index.html
+++ b/index.html
@@ -66,18 +66,25 @@
           <div class="home-content grid">
             <div class="home-social">
               <a
-                href="https://www.facebook.com/tuyen.tyn/"
+                href="https://www.linkedin.com/in/tuyenlee099/"
                 target="_blank"
                 class="home-social-icon"
               >
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
               <a
-                href="https://github.com/tuyenle009"
+                href="https://www.facebook.com/tynlele/"
                 target="_blank"
                 class="home-social-icon"
               >
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@tyn.lee"
+                target="_blank"
+                class="home-social-icon"
+              >
+                <i class="fa-brands fa-tiktok"></i>
               </a>
               <a
                 href="https://github.com/tuyenle009"
@@ -240,10 +247,10 @@
                   <span class="qualification-subtitle">Hung Yen University of Technology and Education</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2025
+                    2023 - 2027
                   </div>
                   <div class="qualification-date fw-500" style="margin-top: 4px;color: black; font-size: 11px;">
-                    CGPA: 3.5/4 - Degree
+                    GPA: 3.9/4 - Degree
                   </div>
                   <div class="qualification-date fw-500" style="color: black; font-size: 11px">
                     Very Good
@@ -267,12 +274,12 @@
 
                 <div>
                   <h3 class="qualification-title">
-                    Full Stack Web Development
+                    Advanced Deep Learning
                   </h3>
-                  <span class="qualification-subtitle">Hung Yen University of Technology and Education</span>
+                  <span class="qualification-subtitle">Viet Nguyen AI Course</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2025
+                    2024 - 2025
                   </div>
                 </div>
               </div>
@@ -281,11 +288,11 @@
 
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Full Stack Web Development</h3>
-                  <span class="qualification-subtitle">Hung Yen University of Technology and Education</span>
+                  <h3 class="qualification-title">Machine Learning Foundations: A Case Study Approach</h3>
+                  <span class="qualification-subtitle">University of Washington - Coursera</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2025
+                    2023 - 2024
                   </div>
                 </div>
                 <div>
@@ -304,10 +311,10 @@
                   <span class="qualification-subtitle">ETS</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - 2026
+                    2024 - 2026
                   </div>
                   <div class="qualification-date fw-500" style="margin-top: 4px;color: black; font-size: 11px;">
-                    CGPA: 3.5/4 - Degree
+                    Score: 600
                   </div>
                 </div>
                 <div>
@@ -327,11 +334,11 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification-title">Ui/Ux Designer</h3>
-                  <span class="qualification-subtitle">Freelancer</span>
+                  <h3 class="qualification-title">Content Creator</h3>
+                  <span class="qualification-subtitle">Tiktoker</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - Present
+                    2025 - Present
                   </div>
                 </div>
               </div>
@@ -344,7 +351,7 @@
                   <span class="qualification-subtitle">YouTube</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2019 - Present
+                    2024 - Present
                   </div>
                 </div>
                 <div>
@@ -537,15 +544,15 @@
           <div class="swiper-wrapper">
             <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="./Assets/Per/project1.svg" alt="" class="portfolio-img" />
+              <img src="./Assets/Per/Football.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Badminton Analysis using YOLOv8</h3>
+                <h3 class="portfolio-title">Football Analysis using YOLOv5</h3>
                 <p class="portfolio-description">
-                  This project utilizes computer vision techniques to detect players and shuttlecocks in badminton games.
+                  This project utilizes computer vision techniques to detect players, the ball, and classify players' jersey numbers.
                 </p>
                 <a
-                  href="https://github.com/tuyenle009/PSPNet-Pytorch"
+                  href="https://github.com/tuyenle009/Football-Player-Tracking-Pytorch"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -555,15 +562,15 @@
             </div>
             <!-- project2  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="./Assets/Per/forklift.jpg" alt="" class="portfolio-img" />
+              <img src="./Assets/Per/Vehicle.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Forklift Detection using YOLOv5</h3>
+                <h3 class="portfolio-title">Object Tracking and Vehicle Counting</h3>
                 <p class="portfolio-description">
-                  This project utilizes the YOLOv5 object detection model to identify forklifts within images or video frames.
+                  This project uses YOLOv5 to detect vehicles, track their movement, and count the number of vehicles.
                 </p>
                 <a
-                  href="https://github.com/tuyenle009/Faster-RCNN-Pytorch"
+                  href="https://github.com/tuyenle009/YOLOv8-Object_Tracking-Counting_Vehicles"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -573,15 +580,15 @@
             </div>
             <!-- project3  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="./Assets/Per/treeDetection.jpg" alt="" class="portfolio-img" />
+              <img src="./Assets/Per/Hand.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Tree Detection using Faster R-CNN </h3>
+                <h3 class="portfolio-title">Hand Sign Language Recognition</h3>
                 <p class="portfolio-description">
-                  Detect trees in images using Faster R-CNN with MobileNetV3 Large 320 FPN backbone.
+                  This project uses a ResNet34 model in PyTorch, MediaPipe, and OpenCV for accurate hand sign recognition with deep learning and computer vision.
                 </p>
                 <a
-                  href="https://github.com/tuyenle009/Football-Player-Tracking-Pytorch"
+                  href="https://github.com/tuyenle009/Hand-Sign-Language-Recognition-Pytorch"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -781,7 +788,7 @@
 
             <div class="footer-socials">
               <a
-                href="https://www.facebook.com/tuyen.tyn/"
+                href="https://www.linkedin.com/in/tuyenlee099/"
                 target="_blank"
                 class="footer-social"
               >
@@ -796,11 +803,18 @@
                 <i class="fa-brands fa-github"></i>
               </a>
               <a
-                href="https://www.facebook.com/tuyen.tyn/"
+                href="https://www.facebook.com/tynlele/"
                 target="_blank"
                 class="footer-social"
               >
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@tyn.lee"
+                target="_blank"
+                class="footer-social"
+              >
+                <i class="fa-brands fa-tiktok"></i>
               </a>
             </div>
           </div>
