--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           <div class="home-content grid">
             <div class="home-social">
               <a
-                href="https://www.linkedin.com/in/tuyenlee099/"
+                href="https://www.youtube.com/@TinLee99"
                 target="_blank"
                 class="home-social-icon"
               >
-                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-youtube"></i>
               </a>
               <a
                 href="https://www.facebook.com/tynlele/"
@@ -85,6 +85,13 @@
                 class="home-social-icon"
               >
                 <i class="fa-brands fa-tiktok"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/tuyenlee099/"
+                target="_blank"
+                class="home-social-icon"
+              >
+                <i class="fa-brands fa-linkedin-in"></i>
               </a>
               <a
                 href="https://github.com/tuyenle009"
@@ -787,13 +794,7 @@
             </ul>
 
             <div class="footer-socials">
-              <a
-                href="https://www.linkedin.com/in/tuyenlee099/"
-                target="_blank"
-                class="footer-social"
-              >
-                <i class="fa-brands fa-linkedin-in"></i>
-              </a>
+             
               <a
                 href="https://github.com/tuyenle009"
                 target="_blank"
@@ -815,6 +816,13 @@
                 class="footer-social"
               >
                 <i class="fa-brands fa-tiktok"></i>
+              </a>
+              <a
+                href="https://www.youtube.com/@TinLee99"
+                target="_blank"
+                class="footer-social"
+              >
+                <i class="fa-brands fa-youtube"></i>
               </a>
             </div>
           </div>
